// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`playerInformation unit test snapshot(PieceColor Black) 1`] = `
<div
  className="sc-gueYoa gjIPxb"
>
  <span
    className="sc-jTrPJq gVbQSV"
  >
    0
  </span>
  <div
    className="sc-dmqHEX dgUxyv"
  >
    <span
      className="sc-beqWaB hMOBiy"
      color="#fff"
    />
    <p
      className="sc-eDDNvR hDiIxH"
      color="#555"
    >
      P2
    </p>
  </div>
</div>
`;

exports[`playerInformation unit test snapshot(PieceColor White) 1`] = `
<div
  className="sc-gueYoa gjIPxb"
>
  <div
    className="sc-dmqHEX dgUxyv"
  >
    <span
      className="sc-beqWaB ihtgog"
      color="#000"
    />
    <p
      className="sc-eDDNvR jTDArk"
      color="#fff"
    >
      P1
    </p>
  </div>
  <span
    className="sc-jTrPJq gVbQSV"
  >
    0
  </span>
</div>
`;
